fixed build on docker hub